--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,11 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  transition: filter[hue-rotate] 2s;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
+  filter: hue-rotate(90deg);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
@@ -39,4 +41,9 @@
 
 .read-the-docs {
   color: #888;
+}
+
+#img:hover {
+    border: 2px solid #ddd;
+
 }
