Add all svgs for Buttons, refactored App.jsx - mapped props

--- a/src/App.css
+++ b/src/App.css
@@ -5,45 +5,33 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-  transition: filter[hue-rotate] 2s;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-  filter: hue-rotate(90deg);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.quizFormContainer {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formContainer {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+form div {
+  min-width: 500px;
+  margin-top: 5px;
+  margin-bottom: 3px;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-#img:hover {
+svg:hover {
     border: 2px solid #ddd;
+}
 
+.d-none {
+  display: none;
+}
+
+input:invalid {
+  border: solid red 3px;
 }
