--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   color: #d9d9d9
 }
 
+/* MAIN */
 #superContainer {
   width: 100%;
   height: 100vh;
@@ -15,6 +16,7 @@
   flex-direction: column;
 }
 
+/* CONTENT */
 #topContainer {
   display: flex;
   height: 80%;
@@ -28,6 +30,7 @@
   }
 }
 
+/* FOOTER */
 #controlsContainer {
   display: flex;
   flex-direction: row;
@@ -38,27 +41,9 @@
   justify-content: center;
   background-color: #5f9ea044;
   border-top: #d9d9d9 2.33px inset;
-}
-
-#controlsContainer div {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.svgButton {
-  width: 200px !important;
-  height: 200px !important;
-  .remove {
-    transform: scale(-.5);
-    svg .color1 {
-      fill: #de004a !important;
-    }
-    svg #plusColor {
-      fill: #de004a !important;
-    }
-    svg #bgTopColor {
-      fill: #de004a !important;
-    }
+  div {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -71,6 +56,7 @@ button {
 .formContainer {
   margin-left: auto;
   margin-right: auto;
+  justify-content: center;
 }
 
 .userTokenContainer {
@@ -88,10 +74,6 @@ button {
 form div {
   margin-top: 5px;
   margin-bottom: 3px;
-}
-
-svg:hover {
-    border: 2px solid #ddd;
 }
 
 .d-none {
@@ -130,11 +112,6 @@ input:invalid {
 
 
 
-input, button {
-  height: 50% !important;
-  width:auto !important;
-}
-
 div {
   margin-left: auto;
   margin-right: auto;
@@ -143,21 +120,45 @@ div {
 .buttonContainer {
   display: flex;
   direction: row;
-  height: auto;
-  width: auto;
+  height: 80%;
+  justify-content: space-between;
+  svg, button {
+    display: table-cell;
+    vertical-align: middle;
+    height: 6rem;
+    flex-shrink: auto;
+    margin: auto;
+  }
 }
 
-.buttonContainer > div {
+.quizSelectionForm svg{
+  height: 60px;
+}
+
+.inputs {
+  width: 100%;
+}
+
+.selectionInputContainer {
   display: flex;
   flex-direction: column;
-  height: fit-content;
-  width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: space-around;
+  text-align: left;
 }
 
-.buttonContainer > div > button {
-  display: flex;
+.formButton {
+  display: inline-flex;
+  flex-direction: row;
+  margin: auto;
+  padding: auto;
+  height:80px;
+  svg, button {
+    height: 80px;
+  }
+}
+
+svg:hover {
+  cursor: pointer;
 }
 
 #resetPrompt {
@@ -171,14 +172,23 @@ div {
   width: 100vw;
   height: 100vh;
   backdrop-filter: blur(5px);
-  background-color: #34393e33;
+  background-color: #34393e99;
 }
 
-
+.inputs {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.addSubBtn {
+  margin-left: 1.5rem;
+}
 
 #ruinEverything {
-  background-color: #de004a33;
-  color: #de004a;
+  background-color: #ffffffaa;
+  color: #000;
+  margin: .5rem;
 }
 
 #ruinEverything:hover {
@@ -187,8 +197,9 @@ div {
 }
 
 #backToQuizSelection {
-  background-color: #ff7f5033;
-  color: #ff7f50;
+  background-color: #ff7f50aa;
+  color: #000;
+  margin: .5rem;
 }
 
 #backToQuizSelection:hover {
@@ -196,9 +207,21 @@ div {
   color: white;
 }
 
+#nvm {
+  background-color: #000;
+  color: #fff;
+  margin: .5rem;
+}
+
+#nvm:hover {
+  background-color: #de00a4;
+  color: white;
+}
+
 #resetQuiz {
   background-color: #ffcc0033;
   color: #ffcc00;
+  
 }
 
 #resetQuiz:hover {
