--- a/src/App.css
+++ b/src/App.css
@@ -136,8 +136,19 @@ div {
 }
 
 .inputs {
-  width: 100%;
+  display: inline-flexbox;
+  flex-wrap: wrap;
+  width: 50%;
 }
+
+.inputBtnContainer {
+  display: inline-block;
+  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
 
 .selectionInputContainer {
   display: flex;
@@ -147,13 +158,14 @@ div {
 }
 
 .formButton {
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
-  margin: auto;
   padding: auto;
   height:80px;
+  justify-content: space-evenly;
   svg, button {
     height: 80px;
+    width: 80px;
   }
 }
 
@@ -180,9 +192,7 @@ svg:hover {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-.addSubBtn {
-  margin-left: 1.5rem;
+  min-width: 272;
 }
 
 #ruinEverything {
@@ -237,4 +247,12 @@ svg:hover {
 #nextQuestion:hover {
   background-color: #21f359;
   color: white;
+}
+
+@media (max-width: 558px) {
+  .inputs {
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+  }
 }
